--- a/src/App.css
+++ b/src/App.css
@@ -19,11 +19,13 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: min-content;
   background-image: url("./images/fitness.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  text-align: center;
 }
 
 .hero-bg {
@@ -35,26 +37,23 @@ body {
 }
 
 .form {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: min-content;
   background-color: #fcf6f5;
   padding: 1rem;
-}
-
-.fieldset{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 /* button styles */
 
 .controllers{
-  position: absolute;
-  left: 0;
-  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -157,4 +156,15 @@ p{
 
 .controllers--unvisible{
   display: none;
+}
+
+@media screen and (min-width: 768px) and (min-height: 414px){
+  .form{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    min-height: 50%;
+    height: max-content;
+  }
 }
