--- a/src/App.css
+++ b/src/App.css
@@ -164,7 +164,9 @@ p{
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50%;
+    max-width: 600px;
     min-height: 50%;
     height: max-content;
+    border-radius: 16px;
   }
 }
