--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   color: #f9b425;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .container {
@@ -53,12 +53,16 @@ body {
 
 /* button styles */
 
-.controllers{
+.controllers {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 16px;
   width: 100%;
+
+  &--unvisible {
+    display: none;
+  }
 }
 
 button {
@@ -72,94 +76,141 @@ button {
   cursor: pointer;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 12px 25px 0px;
   transition: background-color 0.3s;
+  &:hover {
+    background-color: #e8a314;
+  }
+
+  &:active {
+    background-color: #c68102;
+  }
+
+  &:disabled {
+    background-color: #867b7b;
+    color: #ebe5e4;
+    cursor: unset;
+  }
 }
 
-button:hover {
-  background-color: #e8a314;
-}
-
-button:active {
-  background-color: #c68102;
-}
-
-button:disabled {
-  background-color: #867b7b;
-  color: #ebe5e4;
-  cursor: unset;
-}
-
-h1{
+h1 {
   text-align: center;
+  
 }
 
-select{
+select {
   padding: 8px;
-  border: 2px solid #F4DED6;
-  background-color: #fcf6f5;
+  border: none;
+  background-color: transparent;
   color: #f9b425;
   font-weight: bold;
   font-size: 16px;
   outline: transparent;
   cursor: pointer;
+  -moz-appearance: textfield;
+  appearance: none;
 }
 
-input[type='number']{
+.select__field{
+  display: flex;
+  align-items: center;
+  background-color: #fcf6f5;
+  border: 2px solid #f4ded6;
+}
+
+input[type="number"] {
   width: 64px;
   padding: 8px;
   border-radius: 20px;
   background-color: #fcf6f5;
-  color: #f9b425; 
-  border:none;
+  color: #f9b425;
+  border: none;
   text-align: center;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.15);
+  border-collapse: collapse;
+  appearance: none;
+  -moz-appearance: textfield;
   outline: transparent;
 }
 
-input::-webkit-inner-spin-button{
+input::-webkit-inner-spin-button {
   appearance: none;
 }
 
-.row{
+//RADIO
+input[type='radio']{
+  opacity: 0;
+  width: 0;
+  height: 0;
+
+  &:checked + .radio__label{
+    &::before{
+      background-color: #f9b425;
+    }
+  }
+}
+
+.radio__label{
+  position: relative;
+  margin-bottom: 20px;
+  cursor: pointer;
+
+  svg{
+    font-size: 36px;
+  }
+
+  &::before{
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #f9b425;
+    box-shadow: inset 0 0 0 2px #fcf6f5;
+    background-color: #fcf6f5;
+    transition: background-color .3s;
+  }
+}
+
+.row {
   display: flex;
   justify-content: space-around;
   width: 100%;
   margin: 16px 0;
 }
 
-.row__option{
+.row__option {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   margin: 0 16px;
 }
 
-label{
+label {
   font-size: 16px;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
 }
 
-p{
+p {
   font-size: 16px;
 }
 
-.controlled-input{
+.controlled-input {
   display: flex;
   align-items: center;
+
+  &__button {
+    margin: 0 16px;
+  }
 }
 
-.controlled-input__button{
-  margin: 0 16px;
-}
-
-.controllers--unvisible{
-  display: none;
-}
-
-@media screen and (min-width: 768px) and (min-height: 414px){
-  .form{
+@media screen and (min-width: 768px) and (min-height: 414px) {
+  .form {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
