--- a/src/App.scss
+++ b/src/App.scss
@@ -51,7 +51,9 @@ body {
   padding: 1rem;
 }
 
-/* button styles */
+h1 {
+  text-align: center;
+}
 
 .controllers {
   display: flex;
@@ -59,12 +61,15 @@ body {
   justify-content: space-between;
   padding: 16px;
   width: 100%;
-
+  
   &--unvisible {
     display: none;
   }
 }
 
+/* button styles */
+
+//BUTTON
 button {
   padding: 8px 16px;
   border: none;
@@ -91,9 +96,12 @@ button {
   }
 }
 
-h1 {
-  text-align: center;
-  
+//SELECT
+.select__field{
+  display: flex;
+  align-items: center;
+  background-color: #fcf6f5;
+  border: 2px solid #f4ded6;
 }
 
 select {
@@ -109,13 +117,7 @@ select {
   appearance: none;
 }
 
-.select__field{
-  display: flex;
-  align-items: center;
-  background-color: #fcf6f5;
-  border: 2px solid #f4ded6;
-}
-
+//NUMBER
 input[type="number"] {
   width: 64px;
   padding: 8px;
@@ -178,7 +180,7 @@ input[type='radio']{
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin: 16px 0;
+  margin: 20px 0;
 }
 
 .row__option {
