--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-width: 300px;
   width: 100%;
   min-height: 100vh;
   height: min-content;
@@ -67,10 +68,8 @@ h1 {
   }
 }
 
-/* button styles */
-
 //BUTTON
-button {
+button, a {
   padding: 8px 16px;
   border: none;
   border-radius: 20px;
@@ -79,6 +78,7 @@ button {
   font-weight: bold;
   color: #fcf6f5;
   cursor: pointer;
+  text-decoration: none;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 12px 25px 0px;
   transition: background-color 0.3s;
   &:hover {
