--- a/src/App.scss
+++ b/src/App.scss
@@ -68,8 +68,19 @@ h1 {
   }
 }
 
+.standard-link{
+  color:#f9b425;
+  transition: color .3s;
+  &:hover{
+    color: #e8a314;
+  }
+  &:active{
+    color: #c68102;
+  }
+}
+
 //BUTTON
-button, a {
+button, .controllers__link {
   padding: 8px 16px;
   border: none;
   border-radius: 20px;
@@ -209,6 +220,11 @@ p {
   &__button {
     margin: 0 16px;
   }
+}
+
+footer{
+  position: absolute;
+  bottom: 4px;
 }
 
 @media screen and (min-width: 768px) and (min-height: 414px) {
